style: create user handler
