# pkg/routes/public_routes.go
@@ -12,4 +12,5 @@ func PublicRoutes(a *fiber.App) {
 
 	// Routes for GET method
 	route.Get("/hello/:last_name", controllers.GetHello) // get first_name by last_name
+	route.Post("/user/sign/up", controllers.UserSignUp)  // create user
 }
